--- a/styles/login.css
+++ b/styles/login.css
@@ -26,6 +26,12 @@
     font-size: 1.3em;
 }
 
+.error-message {
+  color: red;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
 form {
     margin-top: 50px;
     display: flex;
