--- a/styles/login.css
+++ b/styles/login.css
@@ -27,9 +27,9 @@
 }
 
 .error-message {
-  color: red;
-  font-weight: bold;
-  margin: 10px 0;
+    color: red;
+    font-weight: bold;
+    margin: 10px 0;
 }
 
 form {
@@ -51,22 +51,13 @@ input {
 .actions {
     display: flex;
     justify-content: space-between;
+    align-content: center;
     margin-top: 20px;
 }
-
-#loginButton {
-    background-color: #7597c9;
-    width: 45%;
-    height: 57px;
-    border-radius: 10px;
-    color: #282430;
+.transparent_button {
+    width: 40% !important;
 }
 
-#registerButton {
-    background-color: #282430;
-    width: 45%;
-    height: 57px;
-    border-radius: 10px;
-    color: #7597c9;
-    border: 1px solid #7597c9;
+.blue_button {
+    width: 40% !important;
 }
