--- a/styles/now_showing.css
+++ b/styles/now_showing.css
@@ -2,21 +2,9 @@
     flex-direction: column;
 }
 
-#splash_screen {
-    width: 90vw;
-    max-height: 500px;
-    object-fit: cover;
-    border-radius: 30px;
-}
-
-hr {
-    margin-top: 30px;
-    border-top: 0.5px solid #ded7d7;
-    width: 100%;
-}
-
 .section {
     width: 100%;
+    height: 100%;
 }
 
 .section-heading {
