Support page ui completed

--- a/styles/login.css
+++ b/styles/login.css
@@ -46,6 +46,7 @@ input {
     background-color: #282430;
     border: 1px solid #7597c9;
     border-radius: 10px;
+    color: #ded7d7;
 }
 
 .actions {
