--- a/styles/account.css
+++ b/styles/account.css
@@ -1,35 +1,51 @@
+/* Account-specific CSS styles */
+
 .wrapper {
-    flex-direction: column;
+  width: 90%;
+  margin: auto;
+  display: block; /* Ensure sections are stacked vertically */
 }
 
-#splash_screen {
-    width: 90vw;
-    max-height: 500px;
-    object-fit: cover;
-    border-radius: 30px;
+section {
+  margin-bottom: 40px;
 }
 
-hr {
-    margin-top: 30px;
-    border-top: 0.5px solid #ded7d7;
-    width: 100%;
+.movie-item {
+  display: grid;
+  grid-template-columns: 200px 1fr auto;
+  align-items: center;
+  background-color: #3d3c52;
+  padding: 20px;
+  margin: 15px 0;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  gap: 20px;
 }
 
-.section {
-    width: 100%;
+.movie-item img {
+  width: 200px;
+  height: 300px;
+  border-radius: 10px;
 }
 
-.section-heading {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; /* Center aligns the items vertically */
-    color: #ded7d7;
+.movie-details {
+  color: #ffffff;
 }
 
-.section-heading a {
-    text-decoration: underline;
-    color: #ded7d7;
+.movie-details h3 {
+  margin: 0;
+  font-size: 2rem;
+  color: #ffffff;
 }
 
+.movie-details p {
+  margin: 10px 0;
+  font-size: 1.2rem;
+}
 
-
+.button-container {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-left: auto;
+}
