--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,15 @@ body {
 
 
 /* Nav styles */
+.wrapper {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
 
 header {
   margin: 30px auto;
