--- a/styles/home.css
+++ b/styles/home.css
@@ -40,17 +40,17 @@ hr {
 }
 
 .card {
-    /* padding: 5px; */
     padding-bottom: 15px;
-    width: 280px;
+    width: 16.6667%;
     display: flex;
     flex-direction: column;
     color: #ded7d7;
     text-align: center;
+    transition: transform 0.3s ease; /* Smooth scaling transition */
 }
 
 .card:hover {
-    width: 290px;
+    transform: scale(1.08); /* Scale up the card to 1.3x on hover */
 }
 
 a:hover {
