small device sizes

--- a/styles/cinemas.css
+++ b/styles/cinemas.css
@@ -2,28 +2,40 @@
     width: 60% !important;
 }
 
-td {
-    color: #ded7d7;
-    text-align: left;
-    vertical-align: top; /* Set the default vertical alignment for cells */
+.cinemas {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-table {
-    width: 100%; /* Ensure the table takes full width */
-    border-collapse: collapse; /* Remove spacing between cells */
+.cinema-card {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 50px;
 }
 
-th,
-td {
-    padding: 10px; /* Adjust padding as needed */
+.cinema-details {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-self: end;
 }
 
-table h3 {
-    margin-top: 70px; /* Add margin to adjust vertical position */
-    margin-bottom: 5px; /* Optional: adjust bottom margin if needed */
+@media (max-width: 1500px) {
+    .wrapper {
+        width: 80% !important;
+    }
 }
 
-p {
-    margin: 0; /* Remove default margin from paragraphs */
-    line-height: 1.4; /* Adjust line height for better spacing */
+@media (max-width: 900px) {
+    .cinema-card {
+        flex-direction: column;
+    }
+
+    .cinema-details {
+        align-content: center;
+        align-self: center;
+        width: 100%;
+    }
 }
