--- a/styles/home.css
+++ b/styles/home.css
@@ -38,7 +38,6 @@ hr {
     width: 100%;
     justify-content: flex-start;
 }
-
 .card {
     padding-bottom: 15px;
     width: 16.6667%;
@@ -50,7 +49,18 @@ hr {
 }
 
 .card:hover {
-    transform: scale(1.08); /* Scale up the card to 1.3x on hover */
+    transform: scale(1.3); /* Scale up the card to 1.3x on hover */
+}
+
+.card-image {
+    align-self: center;
+    width: 80%;
+}
+
+@media (max-width: 1000px) {
+    .card {
+        width: 25%;
+    }
 }
 
 a:hover {
