--- a/styles/movie_details.css
+++ b/styles/movie_details.css
@@ -54,6 +54,18 @@ hr {
 .card:hover {
     transform: scale(1.08); /* Scale up the card to 1.3x on hover */
 }
+
+.card-image {
+    align-self: center;
+    width: 80%;
+}
+
+@media (max-width: 1000px) {
+    .card {
+        width: 25%;
+    }
+}
+
 a:hover {
     color: #7597c9;
 }
@@ -63,7 +75,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 600px;
+
     align-items: center;
     justify-content: space-between;
 }
@@ -85,6 +97,7 @@ a:hover {
     width: 100%;
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .genre_bubble {
@@ -108,4 +121,45 @@ a:hover {
     gap: 20px;
     display: flex;
     flex-direction: row;
+}
+
+@media (max-width: 900px) {
+    .movie_details {
+        flex-direction: column;
+        width: 80%;
+    }
+
+    .movie-image {
+        width: 100%;
+    }
+
+    .movie-meta {
+        justify-content: center;
+        width: 100%;
+        text-align: center;
+    }
+
+    .genre_section {
+        justify-content: center;
+    }
+
+    .button_group {
+        justify-content: center;
+    }
+    .movie-cast {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+    }
+    .cast-details {
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        padding-left: 10px;
+        justify-content: start;
+    }
+
+    hr {
+        width: 0;
+    }
 }
