--- a/styles/now_showing.css
+++ b/styles/now_showing.css
@@ -37,8 +37,18 @@
     transition: transform 0.3s ease; /* Smooth scaling transition */
 }
 
+.card-image {
+    align-self: center;
+    width: 80%;
+}
 .card:hover {
     transform: scale(1.08); /* Scale up the card to 1.3x on hover */
+}
+
+@media (max-width: 1000px) {
+    .card {
+        width: 25%;
+    }
 }
 
 a:hover {
