--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@
 
 #splash_screen {
     width: 90vw;
-    max-height: 500px;
+    max-height: 30vh;
     object-fit: cover;
     border-radius: 30px;
 }
@@ -49,7 +49,7 @@ hr {
 }
 
 .card:hover {
-    transform: scale(1.3); /* Scale up the card to 1.3x on hover */
+    transform: scale(1.08);
 }
 
 .card-image {
@@ -57,9 +57,15 @@ hr {
     width: 80%;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 964px) {
     .card {
         width: 25%;
+    }
+}
+
+@media (max-width: 644px) {
+    .card {
+        width: 50%;
     }
 }
 
