--- a/styles/now_showing.css
+++ b/styles/now_showing.css
@@ -42,15 +42,20 @@
     width: 80%;
 }
 .card:hover {
-    transform: scale(1.08); /* Scale up the card to 1.3x on hover */
+    transform: scale(1.08);
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 964px) {
     .card {
         width: 25%;
     }
 }
 
+@media (max-width: 644px) {
+    .card {
+        width: 50%;
+    }
+}
 a:hover {
     color: #7597c9;
 }
